--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Integration tests written in cypress.io for WSO2 API Manager 4.x versions",
   "main": "index.js",
   "scripts": {
-    "test": "cypress open"
+    "test": "cypress run",
+    "test:gui": "cypress run --headed"
   },
   "keywords": [
     "cypress.io"
